cmake_minimum_required(VERSION 3.22)
project(Graphs)

set(CMAKE_CXX_STANDARD 17)

include_directories(deps/googletest/googlemock/include)
include_directories(deps/googletest/googlemock/include/gmock)
include_directories(deps/googletest/googlemock/include/gmock/internal)
include_directories(deps/googletest/googlemock/include/gmock/internal/custom)
include_directories(deps/googletest/googlemock/test)
include_directories(deps/googletest/googletest/include)
include_directories(deps/googletest/googletest/include/gtest)
include_directories(deps/googletest/googletest/include/gtest/internal)
include_directories(deps/googletest/googletest/include/gtest/internal/custom)
include_directories(deps/googletest/googletest/samples)
include_directories(deps/googletest/googletest/src)
include_directories(deps/googletest/googletest/test)
include_directories(deps/json/include)
include_directories(deps/json/include/nlohmann)
include_directories(deps/json/include/nlohmann/detail)
include_directories(deps/json/include/nlohmann/detail/conversions)
include_directories(deps/json/include/nlohmann/detail/input)
include_directories(deps/json/include/nlohmann/detail/iterators)
include_directories(deps/json/include/nlohmann/detail/meta)
include_directories(deps/json/include/nlohmann/detail/meta/call_std)
include_directories(deps/json/include/nlohmann/detail/output)
include_directories(deps/json/include/nlohmann/thirdparty)
include_directories(deps/json/include/nlohmann/thirdparty/hedley)
include_directories(deps/json/single_include)
include_directories(deps/json/single_include/nlohmann)
include_directories(deps/json/tests/abi/config)
include_directories(deps/json/tests/abi/diag)
include_directories(deps/json/tests/abi/include)
include_directories(deps/json/tests/abi/include/nlohmann)
include_directories(deps/json/tests/cmake_target_include_directories/project)
include_directories(deps/json/tests/src)
include_directories(deps/json/tests/thirdparty/doctest)
include_directories(deps/json/tests/thirdparty/fifo_map)
include_directories(deps/json/tests/thirdparty/Fuzzer)

add_executable(Graphs
        deps/googletest/googlemock/include/gmock/internal/custom/gmock-generated-actions.h
        deps/googletest/googlemock/include/gmock/internal/custom/gmock-matchers.h
        deps/googletest/googlemock/include/gmock/internal/custom/gmock-port.h
        deps/googletest/googlemock/include/gmock/internal/gmock-internal-utils.h
        deps/googletest/googlemock/include/gmock/internal/gmock-port.h
        deps/googletest/googlemock/include/gmock/internal/gmock-pp.h
        deps/googletest/googlemock/include/gmock/gmock-actions.h
        deps/googletest/googlemock/include/gmock/gmock-cardinalities.h
        deps/googletest/googlemock/include/gmock/gmock-function-mocker.h
        deps/googletest/googlemock/include/gmock/gmock-matchers.h
        deps/googletest/googlemock/include/gmock/gmock-more-actions.h
        deps/googletest/googlemock/include/gmock/gmock-more-matchers.h
        deps/googletest/googlemock/include/gmock/gmock-nice-strict.h
        deps/googletest/googlemock/include/gmock/gmock-spec-builders.h
        deps/googletest/googlemock/include/gmock/gmock.h
        deps/googletest/googlemock/src/gmock-all.cc
        deps/googletest/googlemock/src/gmock-cardinalities.cc
        deps/googletest/googlemock/src/gmock-internal-utils.cc
        deps/googletest/googlemock/src/gmock-matchers.cc
        deps/googletest/googlemock/src/gmock-spec-builders.cc
        deps/googletest/googlemock/src/gmock.cc
        deps/googletest/googlemock/src/gmock_main.cc
        deps/googletest/googlemock/test/gmock-actions_test.cc
        deps/googletest/googlemock/test/gmock-cardinalities_test.cc
        deps/googletest/googlemock/test/gmock-function-mocker_test.cc
        deps/googletest/googlemock/test/gmock-internal-utils_test.cc
        deps/googletest/googlemock/test/gmock-matchers-arithmetic_test.cc
        deps/googletest/googlemock/test/gmock-matchers-comparisons_test.cc
        deps/googletest/googlemock/test/gmock-matchers-containers_test.cc
        deps/googletest/googlemock/test/gmock-matchers-misc_test.cc
        deps/googletest/googlemock/test/gmock-matchers_test.h
        deps/googletest/googlemock/test/gmock-more-actions_test.cc
        deps/googletest/googlemock/test/gmock-nice-strict_test.cc
        deps/googletest/googlemock/test/gmock-port_test.cc
        deps/googletest/googlemock/test/gmock-pp-string_test.cc
        deps/googletest/googlemock/test/gmock-pp_test.cc
        deps/googletest/googlemock/test/gmock-spec-builders_test.cc
        deps/googletest/googlemock/test/gmock_all_test.cc
        deps/googletest/googlemock/test/gmock_ex_test.cc
        deps/googletest/googlemock/test/gmock_leak_test_.cc
        deps/googletest/googlemock/test/gmock_link2_test.cc
        deps/googletest/googlemock/test/gmock_link_test.cc
        deps/googletest/googlemock/test/gmock_link_test.h
        deps/googletest/googlemock/test/gmock_output_test_.cc
        deps/googletest/googlemock/test/gmock_stress_test.cc
        deps/googletest/googlemock/test/gmock_test.cc
        deps/googletest/googletest/include/gtest/internal/custom/gtest-port.h
        deps/googletest/googletest/include/gtest/internal/custom/gtest-printers.h
        deps/googletest/googletest/include/gtest/internal/custom/gtest.h
        deps/googletest/googletest/include/gtest/internal/gtest-death-test-internal.h
        deps/googletest/googletest/include/gtest/internal/gtest-filepath.h
        deps/googletest/googletest/include/gtest/internal/gtest-internal.h
        deps/googletest/googletest/include/gtest/internal/gtest-param-util.h
        deps/googletest/googletest/include/gtest/internal/gtest-port-arch.h
        deps/googletest/googletest/include/gtest/internal/gtest-port.h
        deps/googletest/googletest/include/gtest/internal/gtest-string.h
        deps/googletest/googletest/include/gtest/internal/gtest-type-util.h
        deps/googletest/googletest/include/gtest/gtest-assertion-result.h
        deps/googletest/googletest/include/gtest/gtest-death-test.h
        deps/googletest/googletest/include/gtest/gtest-matchers.h
        deps/googletest/googletest/include/gtest/gtest-message.h
        deps/googletest/googletest/include/gtest/gtest-param-test.h
        deps/googletest/googletest/include/gtest/gtest-printers.h
        deps/googletest/googletest/include/gtest/gtest-spi.h
        deps/googletest/googletest/include/gtest/gtest-test-part.h
        deps/googletest/googletest/include/gtest/gtest-typed-test.h
        deps/googletest/googletest/include/gtest/gtest.h
        deps/googletest/googletest/include/gtest/gtest_pred_impl.h
        deps/googletest/googletest/include/gtest/gtest_prod.h
        deps/googletest/googletest/samples/prime_tables.h
        deps/googletest/googletest/samples/sample1.cc
        deps/googletest/googletest/samples/sample1.h
        deps/googletest/googletest/samples/sample10_unittest.cc
        deps/googletest/googletest/samples/sample1_unittest.cc
        deps/googletest/googletest/samples/sample2.cc
        deps/googletest/googletest/samples/sample2.h
        deps/googletest/googletest/samples/sample2_unittest.cc
        deps/googletest/googletest/samples/sample3-inl.h
        deps/googletest/googletest/samples/sample3_unittest.cc
        deps/googletest/googletest/samples/sample4.cc
        deps/googletest/googletest/samples/sample4.h
        deps/googletest/googletest/samples/sample4_unittest.cc
        deps/googletest/googletest/samples/sample5_unittest.cc
        deps/googletest/googletest/samples/sample6_unittest.cc
        deps/googletest/googletest/samples/sample7_unittest.cc
        deps/googletest/googletest/samples/sample8_unittest.cc
        deps/googletest/googletest/samples/sample9_unittest.cc
        deps/googletest/googletest/src/gtest-all.cc
        deps/googletest/googletest/src/gtest-assertion-result.cc
        deps/googletest/googletest/src/gtest-death-test.cc
        deps/googletest/googletest/src/gtest-filepath.cc
        deps/googletest/googletest/src/gtest-internal-inl.h
        deps/googletest/googletest/src/gtest-matchers.cc
        deps/googletest/googletest/src/gtest-port.cc
        deps/googletest/googletest/src/gtest-printers.cc
        deps/googletest/googletest/src/gtest-test-part.cc
        deps/googletest/googletest/src/gtest-typed-test.cc
        deps/googletest/googletest/src/gtest.cc
        deps/googletest/googletest/src/gtest_main.cc
        deps/googletest/googletest/test/googletest-break-on-failure-unittest_.cc
        deps/googletest/googletest/test/googletest-catch-exceptions-test_.cc
        deps/googletest/googletest/test/googletest-color-test_.cc
        deps/googletest/googletest/test/googletest-death-test-test.cc
        deps/googletest/googletest/test/googletest-death-test_ex_test.cc
        deps/googletest/googletest/test/googletest-env-var-test_.cc
        deps/googletest/googletest/test/googletest-failfast-unittest_.cc
        deps/googletest/googletest/test/googletest-filepath-test.cc
        deps/googletest/googletest/test/googletest-filter-unittest_.cc
        deps/googletest/googletest/test/googletest-global-environment-unittest_.cc
        deps/googletest/googletest/test/googletest-list-tests-unittest_.cc
        deps/googletest/googletest/test/googletest-listener-test.cc
        deps/googletest/googletest/test/googletest-message-test.cc
        deps/googletest/googletest/test/googletest-options-test.cc
        deps/googletest/googletest/test/googletest-output-test_.cc
        deps/googletest/googletest/test/googletest-param-test-invalid-name1-test_.cc
        deps/googletest/googletest/test/googletest-param-test-invalid-name2-test_.cc
        deps/googletest/googletest/test/googletest-param-test-test.cc
        deps/googletest/googletest/test/googletest-param-test-test.h
        deps/googletest/googletest/test/googletest-param-test2-test.cc
        deps/googletest/googletest/test/googletest-port-test.cc
        deps/googletest/googletest/test/googletest-printers-test.cc
        deps/googletest/googletest/test/googletest-setuptestsuite-test_.cc
        deps/googletest/googletest/test/googletest-shuffle-test_.cc
        deps/googletest/googletest/test/googletest-test-part-test.cc
        deps/googletest/googletest/test/googletest-throw-on-failure-test_.cc
        deps/googletest/googletest/test/googletest-uninitialized-test_.cc
        deps/googletest/googletest/test/gtest-typed-test2_test.cc
        deps/googletest/googletest/test/gtest-typed-test_test.cc
        deps/googletest/googletest/test/gtest-typed-test_test.h
        deps/googletest/googletest/test/gtest-unittest-api_test.cc
        deps/googletest/googletest/test/gtest_all_test.cc
        deps/googletest/googletest/test/gtest_assert_by_exception_test.cc
        deps/googletest/googletest/test/gtest_dirs_test.cc
        deps/googletest/googletest/test/gtest_environment_test.cc
        deps/googletest/googletest/test/gtest_help_test_.cc
        deps/googletest/googletest/test/gtest_list_output_unittest_.cc
        deps/googletest/googletest/test/gtest_main_unittest.cc
        deps/googletest/googletest/test/gtest_no_test_unittest.cc
        deps/googletest/googletest/test/gtest_pred_impl_unittest.cc
        deps/googletest/googletest/test/gtest_premature_exit_test.cc
        deps/googletest/googletest/test/gtest_prod_test.cc
        deps/googletest/googletest/test/gtest_repeat_test.cc
        deps/googletest/googletest/test/gtest_skip_in_environment_setup_test.cc
        deps/googletest/googletest/test/gtest_skip_test.cc
        deps/googletest/googletest/test/gtest_sole_header_test.cc
        deps/googletest/googletest/test/gtest_stress_test.cc
        deps/googletest/googletest/test/gtest_test_macro_stack_footprint_test.cc
        deps/googletest/googletest/test/gtest_testbridge_test_.cc
        deps/googletest/googletest/test/gtest_throw_on_failure_ex_test.cc
        deps/googletest/googletest/test/gtest_unittest.cc
        deps/googletest/googletest/test/gtest_xml_outfile1_test_.cc
        deps/googletest/googletest/test/gtest_xml_outfile2_test_.cc
        deps/googletest/googletest/test/gtest_xml_output_unittest_.cc
        deps/googletest/googletest/test/production.cc
        deps/googletest/googletest/test/production.h
        deps/json/docs/examples/accept__string.cpp
        deps/json/docs/examples/array.cpp
        deps/json/docs/examples/array_t.cpp
        deps/json/docs/examples/at__json_pointer.cpp
        deps/json/docs/examples/at__json_pointer_const.cpp
        deps/json/docs/examples/at__keytype.c++17.cpp
        deps/json/docs/examples/at__keytype_const.c++17.cpp
        deps/json/docs/examples/at__object_t_key_type.cpp
        deps/json/docs/examples/at__object_t_key_type_const.cpp
        deps/json/docs/examples/at__size_type.cpp
        deps/json/docs/examples/at__size_type_const.cpp
        deps/json/docs/examples/back.cpp
        deps/json/docs/examples/basic_json__basic_json.cpp
        deps/json/docs/examples/basic_json__CompatibleType.cpp
        deps/json/docs/examples/basic_json__copyassignment.cpp
        deps/json/docs/examples/basic_json__InputIt_InputIt.cpp
        deps/json/docs/examples/basic_json__list_init_t.cpp
        deps/json/docs/examples/basic_json__moveconstructor.cpp
        deps/json/docs/examples/basic_json__nullptr_t.cpp
        deps/json/docs/examples/basic_json__size_type_basic_json.cpp
        deps/json/docs/examples/basic_json__value_t.cpp
        deps/json/docs/examples/begin.cpp
        deps/json/docs/examples/binary.cpp
        deps/json/docs/examples/binary_t.cpp
        deps/json/docs/examples/boolean_t.cpp
        deps/json/docs/examples/byte_container_with_subtype__byte_container_with_subtype.cpp
        deps/json/docs/examples/byte_container_with_subtype__clear_subtype.cpp
        deps/json/docs/examples/byte_container_with_subtype__has_subtype.cpp
        deps/json/docs/examples/byte_container_with_subtype__set_subtype.cpp
        deps/json/docs/examples/byte_container_with_subtype__subtype.cpp
        deps/json/docs/examples/cbegin.cpp
        deps/json/docs/examples/cbor_tag_handler_t.cpp
        deps/json/docs/examples/cend.cpp
        deps/json/docs/examples/clear.cpp
        deps/json/docs/examples/contains__json_pointer.cpp
        deps/json/docs/examples/contains__keytype.c++17.cpp
        deps/json/docs/examples/contains__object_t_key_type.cpp
        deps/json/docs/examples/count__keytype.c++17.cpp
        deps/json/docs/examples/count__object_t_key_type.cpp
        deps/json/docs/examples/crbegin.cpp
        deps/json/docs/examples/crend.cpp
        deps/json/docs/examples/default_object_comparator_t.cpp
        deps/json/docs/examples/diagnostics_extended.cpp
        deps/json/docs/examples/diagnostics_standard.cpp
        deps/json/docs/examples/diff.cpp
        deps/json/docs/examples/dump.cpp
        deps/json/docs/examples/emplace.cpp
        deps/json/docs/examples/emplace_back.cpp
        deps/json/docs/examples/empty.cpp
        deps/json/docs/examples/end.cpp
        deps/json/docs/examples/erase__IteratorType.cpp
        deps/json/docs/examples/erase__IteratorType_IteratorType.cpp
        deps/json/docs/examples/erase__keytype.c++17.cpp
        deps/json/docs/examples/erase__object_t_key_type.cpp
        deps/json/docs/examples/erase__size_type.cpp
        deps/json/docs/examples/error_handler_t.cpp
        deps/json/docs/examples/exception.cpp
        deps/json/docs/examples/find__keytype.c++17.cpp
        deps/json/docs/examples/find__object_t_key_type.cpp
        deps/json/docs/examples/flatten.cpp
        deps/json/docs/examples/from_bjdata.cpp
        deps/json/docs/examples/from_bson.cpp
        deps/json/docs/examples/from_cbor.cpp
        deps/json/docs/examples/from_json__default_constructible.cpp
        deps/json/docs/examples/from_json__non_default_constructible.cpp
        deps/json/docs/examples/from_msgpack.cpp
        deps/json/docs/examples/from_ubjson.cpp
        deps/json/docs/examples/front.cpp
        deps/json/docs/examples/get__PointerType.cpp
        deps/json/docs/examples/get__ValueType_const.cpp
        deps/json/docs/examples/get_allocator.cpp
        deps/json/docs/examples/get_binary.cpp
        deps/json/docs/examples/get_ptr.cpp
        deps/json/docs/examples/get_ref.cpp
        deps/json/docs/examples/get_to.cpp
        deps/json/docs/examples/insert.cpp
        deps/json/docs/examples/insert__count.cpp
        deps/json/docs/examples/insert__ilist.cpp
        deps/json/docs/examples/insert__range.cpp
        deps/json/docs/examples/insert__range_object.cpp
        deps/json/docs/examples/invalid_iterator.cpp
        deps/json/docs/examples/is_array.cpp
        deps/json/docs/examples/is_binary.cpp
        deps/json/docs/examples/is_boolean.cpp
        deps/json/docs/examples/is_discarded.cpp
        deps/json/docs/examples/is_null.cpp
        deps/json/docs/examples/is_number.cpp
        deps/json/docs/examples/is_number_float.cpp
        deps/json/docs/examples/is_number_integer.cpp
        deps/json/docs/examples/is_number_unsigned.cpp
        deps/json/docs/examples/is_object.cpp
        deps/json/docs/examples/is_primitive.cpp
        deps/json/docs/examples/is_string.cpp
        deps/json/docs/examples/is_structured.cpp
        deps/json/docs/examples/items.cpp
        deps/json/docs/examples/json_base_class_t.cpp
        deps/json/docs/examples/json_lines.cpp
        deps/json/docs/examples/json_pointer.cpp
        deps/json/docs/examples/json_pointer__back.cpp
        deps/json/docs/examples/json_pointer__empty.cpp
        deps/json/docs/examples/json_pointer__operator__equal.cpp
        deps/json/docs/examples/json_pointer__operator__equal_stringtype.cpp
        deps/json/docs/examples/json_pointer__operator__notequal.cpp
        deps/json/docs/examples/json_pointer__operator__notequal_stringtype.cpp
        deps/json/docs/examples/json_pointer__operator_add.cpp
        deps/json/docs/examples/json_pointer__operator_add_binary.cpp
        deps/json/docs/examples/json_pointer__operator_string_t.cpp
        deps/json/docs/examples/json_pointer__parent_pointer.cpp
        deps/json/docs/examples/json_pointer__pop_back.cpp
        deps/json/docs/examples/json_pointer__push_back.cpp
        deps/json/docs/examples/json_pointer__string_t.cpp
        deps/json/docs/examples/json_pointer__to_string.cpp
        deps/json/docs/examples/max_size.cpp
        deps/json/docs/examples/merge_patch.cpp
        deps/json/docs/examples/meta.cpp
        deps/json/docs/examples/nlohmann_define_type_intrusive_explicit.cpp
        deps/json/docs/examples/nlohmann_define_type_intrusive_macro.cpp
        deps/json/docs/examples/nlohmann_define_type_intrusive_with_default_explicit.cpp
        deps/json/docs/examples/nlohmann_define_type_intrusive_with_default_macro.cpp
        deps/json/docs/examples/nlohmann_define_type_non_intrusive_explicit.cpp
        deps/json/docs/examples/nlohmann_define_type_non_intrusive_macro.cpp
        deps/json/docs/examples/nlohmann_define_type_non_intrusive_with_default_explicit.cpp
        deps/json/docs/examples/nlohmann_define_type_non_intrusive_with_default_macro.cpp
        deps/json/docs/examples/nlohmann_json_namespace.cpp
        deps/json/docs/examples/nlohmann_json_namespace_begin.c++17.cpp
        deps/json/docs/examples/nlohmann_json_namespace_no_version.cpp
        deps/json/docs/examples/nlohmann_json_serialize_enum.cpp
        deps/json/docs/examples/nlohmann_json_serialize_enum_2.cpp
        deps/json/docs/examples/nlohmann_json_version.cpp
        deps/json/docs/examples/number_float_t.cpp
        deps/json/docs/examples/number_integer_t.cpp
        deps/json/docs/examples/number_unsigned_t.cpp
        deps/json/docs/examples/object.cpp
        deps/json/docs/examples/object_comparator_t.cpp
        deps/json/docs/examples/object_t.cpp
        deps/json/docs/examples/operator__equal.cpp
        deps/json/docs/examples/operator__equal__nullptr_t.cpp
        deps/json/docs/examples/operator__equal__specializations.cpp
        deps/json/docs/examples/operator__greater.cpp
        deps/json/docs/examples/operator__greaterequal.cpp
        deps/json/docs/examples/operator__less.cpp
        deps/json/docs/examples/operator__lessequal.cpp
        deps/json/docs/examples/operator__notequal.cpp
        deps/json/docs/examples/operator__notequal__nullptr_t.cpp
        deps/json/docs/examples/operator__value_t.cpp
        deps/json/docs/examples/operator__ValueType.cpp
        deps/json/docs/examples/operator_array__json_pointer.cpp
        deps/json/docs/examples/operator_array__json_pointer_const.cpp
        deps/json/docs/examples/operator_array__keytype.c++17.cpp
        deps/json/docs/examples/operator_array__keytype_const.c++17.cpp
        deps/json/docs/examples/operator_array__object_t_key_type.cpp
        deps/json/docs/examples/operator_array__object_t_key_type_const.cpp
        deps/json/docs/examples/operator_array__size_type.cpp
        deps/json/docs/examples/operator_array__size_type_const.cpp
        deps/json/docs/examples/operator_deserialize.cpp
        deps/json/docs/examples/operator_literal_json.cpp
        deps/json/docs/examples/operator_literal_json_pointer.cpp
        deps/json/docs/examples/operator_ltlt__basic_json.cpp
        deps/json/docs/examples/operator_ltlt__json_pointer.cpp
        deps/json/docs/examples/operator_spaceship__const_reference.c++20.cpp
        deps/json/docs/examples/operator_spaceship__scalartype.c++20.cpp
        deps/json/docs/examples/ordered_json.cpp
        deps/json/docs/examples/ordered_map.cpp
        deps/json/docs/examples/other_error.cpp
        deps/json/docs/examples/out_of_range.cpp
        deps/json/docs/examples/parse__allow_exceptions.cpp
        deps/json/docs/examples/parse__array__parser_callback_t.cpp
        deps/json/docs/examples/parse__contiguouscontainer__parser_callback_t.cpp
        deps/json/docs/examples/parse__istream__parser_callback_t.cpp
        deps/json/docs/examples/parse__iterator_pair.cpp
        deps/json/docs/examples/parse__pointers.cpp
        deps/json/docs/examples/parse__string__parser_callback_t.cpp
        deps/json/docs/examples/parse_error.cpp
        deps/json/docs/examples/patch.cpp
        deps/json/docs/examples/patch_inplace.cpp
        deps/json/docs/examples/push_back.cpp
        deps/json/docs/examples/push_back__initializer_list.cpp
        deps/json/docs/examples/push_back__object_t__value.cpp
        deps/json/docs/examples/rbegin.cpp
        deps/json/docs/examples/README.cpp
        deps/json/docs/examples/rend.cpp
        deps/json/docs/examples/sax_parse.cpp
        deps/json/docs/examples/sax_parse__binary.cpp
        deps/json/docs/examples/size.cpp
        deps/json/docs/examples/std_hash.cpp
        deps/json/docs/examples/std_swap.cpp
        deps/json/docs/examples/string_t.cpp
        deps/json/docs/examples/swap__array_t.cpp
        deps/json/docs/examples/swap__binary_t.cpp
        deps/json/docs/examples/swap__object_t.cpp
        deps/json/docs/examples/swap__reference.cpp
        deps/json/docs/examples/swap__string_t.cpp
        deps/json/docs/examples/to_bjdata.cpp
        deps/json/docs/examples/to_bson.cpp
        deps/json/docs/examples/to_cbor.cpp
        deps/json/docs/examples/to_json.cpp
        deps/json/docs/examples/to_msgpack.cpp
        deps/json/docs/examples/to_string.cpp
        deps/json/docs/examples/to_ubjson.cpp
        deps/json/docs/examples/type.cpp
        deps/json/docs/examples/type_error.cpp
        deps/json/docs/examples/type_name.cpp
        deps/json/docs/examples/unflatten.cpp
        deps/json/docs/examples/update.cpp
        deps/json/docs/examples/update__range.cpp
        deps/json/docs/examples/value__json_ptr.cpp
        deps/json/docs/examples/value__keytype.c++17.cpp
        deps/json/docs/examples/value__object_t_key_type.cpp
        deps/json/docs/mkdocs/docs/integration/conan/example.cpp
        deps/json/docs/mkdocs/docs/integration/vcpkg/example.cpp
        deps/json/docs/mkdocs/docs/integration/example.cpp
        deps/json/include/nlohmann/detail/conversions/from_json.hpp
        deps/json/include/nlohmann/detail/conversions/to_chars.hpp
        deps/json/include/nlohmann/detail/conversions/to_json.hpp
        deps/json/include/nlohmann/detail/input/binary_reader.hpp
        deps/json/include/nlohmann/detail/input/input_adapters.hpp
        deps/json/include/nlohmann/detail/input/json_sax.hpp
        deps/json/include/nlohmann/detail/input/lexer.hpp
        deps/json/include/nlohmann/detail/input/parser.hpp
        deps/json/include/nlohmann/detail/input/position_t.hpp
        deps/json/include/nlohmann/detail/iterators/internal_iterator.hpp
        deps/json/include/nlohmann/detail/iterators/iter_impl.hpp
        deps/json/include/nlohmann/detail/iterators/iteration_proxy.hpp
        deps/json/include/nlohmann/detail/iterators/iterator_traits.hpp
        deps/json/include/nlohmann/detail/iterators/json_reverse_iterator.hpp
        deps/json/include/nlohmann/detail/iterators/primitive_iterator.hpp
        deps/json/include/nlohmann/detail/meta/call_std/begin.hpp
        deps/json/include/nlohmann/detail/meta/call_std/end.hpp
        deps/json/include/nlohmann/detail/meta/cpp_future.hpp
        deps/json/include/nlohmann/detail/meta/detected.hpp
        deps/json/include/nlohmann/detail/meta/identity_tag.hpp
        deps/json/include/nlohmann/detail/meta/is_sax.hpp
        deps/json/include/nlohmann/detail/meta/std_fs.hpp
        deps/json/include/nlohmann/detail/meta/type_traits.hpp
        deps/json/include/nlohmann/detail/meta/void_t.hpp
        deps/json/include/nlohmann/detail/output/binary_writer.hpp
        deps/json/include/nlohmann/detail/output/output_adapters.hpp
        deps/json/include/nlohmann/detail/output/serializer.hpp
        deps/json/include/nlohmann/detail/abi_macros.hpp
        deps/json/include/nlohmann/detail/exceptions.hpp
        deps/json/include/nlohmann/detail/hash.hpp
        deps/json/include/nlohmann/detail/json_custom_base_class.hpp
        deps/json/include/nlohmann/detail/json_pointer.hpp
        deps/json/include/nlohmann/detail/json_ref.hpp
        deps/json/include/nlohmann/detail/macro_scope.hpp
        deps/json/include/nlohmann/detail/macro_unscope.hpp
        deps/json/include/nlohmann/detail/string_concat.hpp
        deps/json/include/nlohmann/detail/string_escape.hpp
        deps/json/include/nlohmann/detail/value_t.hpp
        deps/json/include/nlohmann/thirdparty/hedley/hedley.hpp
        deps/json/include/nlohmann/thirdparty/hedley/hedley_undef.hpp
        deps/json/include/nlohmann/adl_serializer.hpp
        deps/json/include/nlohmann/byte_container_with_subtype.hpp
        deps/json/include/nlohmann/json.hpp
        deps/json/include/nlohmann/json_fwd.hpp
        deps/json/include/nlohmann/ordered_map.hpp
        deps/json/single_include/nlohmann/json.hpp
        deps/json/single_include/nlohmann/json_fwd.hpp
        deps/json/tests/abi/config/config.hpp
        deps/json/tests/abi/config/custom.cpp
        deps/json/tests/abi/config/default.cpp
        deps/json/tests/abi/config/noversion.cpp
        deps/json/tests/abi/diag/diag.cpp
        deps/json/tests/abi/diag/diag.hpp
        deps/json/tests/abi/diag/diag_off.cpp
        deps/json/tests/abi/diag/diag_on.cpp
        deps/json/tests/abi/include/nlohmann/json_v3_10_5.hpp
        deps/json/tests/abi/inline_ns/use_current.cpp
        deps/json/tests/abi/inline_ns/use_v3_10_5.cpp
        deps/json/tests/abi/main.cpp
        deps/json/tests/benchmarks/src/benchmarks.cpp
        deps/json/tests/cmake_add_subdirectory/project/main.cpp
        deps/json/tests/cmake_fetch_content/project/main.cpp
        deps/json/tests/cmake_fetch_content2/project/main.cpp
        deps/json/tests/cmake_import/project/main.cpp
        deps/json/tests/cmake_import_minver/project/main.cpp
        deps/json/tests/cmake_target_include_directories/project/Bar.cpp
        deps/json/tests/cmake_target_include_directories/project/Bar.hpp
        deps/json/tests/cmake_target_include_directories/project/Foo.cpp
        deps/json/tests/cmake_target_include_directories/project/Foo.hpp
        deps/json/tests/cmake_target_include_directories/project/main.cpp
        deps/json/tests/cuda_example/json_cuda.cu
        deps/json/tests/src/fuzzer-driver_afl.cpp
        deps/json/tests/src/fuzzer-parse_bjdata.cpp
        deps/json/tests/src/fuzzer-parse_bson.cpp
        deps/json/tests/src/fuzzer-parse_cbor.cpp
        deps/json/tests/src/fuzzer-parse_json.cpp
        deps/json/tests/src/fuzzer-parse_msgpack.cpp
        deps/json/tests/src/fuzzer-parse_ubjson.cpp
        deps/json/tests/src/make_test_data_available.hpp
        deps/json/tests/src/test_utils.hpp
        deps/json/tests/src/unit-32bit.cpp
        deps/json/tests/src/unit-algorithms.cpp
        deps/json/tests/src/unit-allocator.cpp
        deps/json/tests/src/unit-alt-string.cpp
        deps/json/tests/src/unit-assert_macro.cpp
        deps/json/tests/src/unit-binary_formats.cpp
        deps/json/tests/src/unit-bjdata.cpp
        deps/json/tests/src/unit-bson.cpp
        deps/json/tests/src/unit-byte_container_with_subtype.cpp
        deps/json/tests/src/unit-capacity.cpp
        deps/json/tests/src/unit-cbor.cpp
        deps/json/tests/src/unit-class_const_iterator.cpp
        deps/json/tests/src/unit-class_iterator.cpp
        deps/json/tests/src/unit-class_lexer.cpp
        deps/json/tests/src/unit-class_parser.cpp
        deps/json/tests/src/unit-comparison.cpp
        deps/json/tests/src/unit-concepts.cpp
        deps/json/tests/src/unit-constructor1.cpp
        deps/json/tests/src/unit-constructor2.cpp
        deps/json/tests/src/unit-convenience.cpp
        deps/json/tests/src/unit-conversions.cpp
        deps/json/tests/src/unit-custom-base-class.cpp
        deps/json/tests/src/unit-deserialization.cpp
        deps/json/tests/src/unit-diagnostics.cpp
        deps/json/tests/src/unit-disabled_exceptions.cpp
        deps/json/tests/src/unit-element_access1.cpp
        deps/json/tests/src/unit-element_access2.cpp
        deps/json/tests/src/unit-hash.cpp
        deps/json/tests/src/unit-inspection.cpp
        deps/json/tests/src/unit-items.cpp
        deps/json/tests/src/unit-iterators1.cpp
        deps/json/tests/src/unit-iterators2.cpp
        deps/json/tests/src/unit-json_patch.cpp
        deps/json/tests/src/unit-json_pointer.cpp
        deps/json/tests/src/unit-large_json.cpp
        deps/json/tests/src/unit-merge_patch.cpp
        deps/json/tests/src/unit-meta.cpp
        deps/json/tests/src/unit-modifiers.cpp
        deps/json/tests/src/unit-msgpack.cpp
        deps/json/tests/src/unit-no-mem-leak-on-adl-serialize.cpp
        deps/json/tests/src/unit-noexcept.cpp
        deps/json/tests/src/unit-ordered_json.cpp
        deps/json/tests/src/unit-ordered_map.cpp
        deps/json/tests/src/unit-pointer_access.cpp
        deps/json/tests/src/unit-readme.cpp
        deps/json/tests/src/unit-reference_access.cpp
        deps/json/tests/src/unit-regression1.cpp
        deps/json/tests/src/unit-regression2.cpp
        deps/json/tests/src/unit-serialization.cpp
        deps/json/tests/src/unit-testsuites.cpp
        deps/json/tests/src/unit-to_chars.cpp
        deps/json/tests/src/unit-type_traits.cpp
        deps/json/tests/src/unit-ubjson.cpp
        deps/json/tests/src/unit-udl.cpp
        deps/json/tests/src/unit-udt.cpp
        deps/json/tests/src/unit-udt_macro.cpp
        deps/json/tests/src/unit-unicode1.cpp
        deps/json/tests/src/unit-unicode2.cpp
        deps/json/tests/src/unit-unicode3.cpp
        deps/json/tests/src/unit-unicode4.cpp
        deps/json/tests/src/unit-unicode5.cpp
        deps/json/tests/src/unit-user_defined_input.cpp
        deps/json/tests/src/unit-windows_h.cpp
        deps/json/tests/src/unit-wstring.cpp
        deps/json/tests/src/unit.cpp
        deps/json/tests/thirdparty/doctest/doctest.h
        deps/json/tests/thirdparty/doctest/doctest_compatibility.h
        deps/json/tests/thirdparty/fifo_map/fifo_map.hpp
        deps/json/tests/thirdparty/Fuzzer/afl/afl_driver.cpp
        deps/json/tests/thirdparty/Fuzzer/standalone/StandaloneFuzzTargetMain.c
        deps/json/tests/thirdparty/Fuzzer/test/AbsNegAndConstant64Test.cpp
        deps/json/tests/thirdparty/Fuzzer/test/AbsNegAndConstantTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/AccumulateAllocationsTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/AFLDriverTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/BufferOverflowOnInput.cpp
        deps/json/tests/thirdparty/Fuzzer/test/CallerCalleeTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/CounterTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/CustomCrossOverTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/CustomMutatorTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/DivTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/DSO1.cpp
        deps/json/tests/thirdparty/Fuzzer/test/DSO2.cpp
        deps/json/tests/thirdparty/Fuzzer/test/DSOTestExtra.cpp
        deps/json/tests/thirdparty/Fuzzer/test/DSOTestMain.cpp
        deps/json/tests/thirdparty/Fuzzer/test/EmptyTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/FourIndependentBranchesTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/FullCoverageSetTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/FuzzerUnittest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/InitializeTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/LeakTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/LeakTimeoutTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/LoadTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/MemcmpTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/NthRunCrashTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/NullDerefOnEmptyTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/NullDerefTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/OneHugeAllocTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/OutOfMemorySingleLargeMallocTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/OutOfMemoryTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/RepeatedBytesTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/RepeatedMemcmp.cpp
        deps/json/tests/thirdparty/Fuzzer/test/ShrinkControlFlowTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/ShrinkValueProfileTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SignedIntOverflowTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SimpleCmpTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SimpleDictionaryTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SimpleHashTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SimpleTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SimpleThreadedTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SingleMemcmpTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SingleStrcmpTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SingleStrncmpTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SpamyTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/StrcmpTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/StrncmpOOBTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/StrncmpTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/StrstrTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SwapCmpTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/Switch2Test.cpp
        deps/json/tests/thirdparty/Fuzzer/test/SwitchTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/ThreadedLeakTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/ThreadedTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/TimeoutEmptyTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/TimeoutTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/TraceMallocTest.cpp
        deps/json/tests/thirdparty/Fuzzer/test/UninstrumentedTest.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerCorpus.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerCrossOver.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerDefs.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerDictionary.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerDriver.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerExtFunctions.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerExtFunctionsDlsym.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerExtFunctionsWeak.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerExtFunctionsWeakAlias.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerInterface.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerInternal.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerIO.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerIO.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerIOPosix.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerIOWindows.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerLoop.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerMain.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerMerge.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerMerge.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerMutate.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerMutate.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerOptions.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerRandom.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerSHA1.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerSHA1.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerTracePC.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerTracePC.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerTraceState.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerUtil.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerUtil.h
        deps/json/tests/thirdparty/Fuzzer/FuzzerUtilDarwin.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerUtilLinux.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerUtilPosix.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerUtilWindows.cpp
        deps/json/tests/thirdparty/Fuzzer/FuzzerValueBitMap.h
        deps/json/tools/macro_builder/main.cpp)

add_executable(App
        main.cpp

        algorithms/Algorithms.hpp
        algorithms/Dijkstra.cpp
        algorithms/FordBellman.cpp
        common/Graph.hpp
        common/Result.hpp
        common/Consts.hpp)
